# unifi-tdx-prover

./: .env  .gitignore  Cargo.toml  README.md  chain_spec_list.json
config/: ata_testnet_mock.json  ata_testnet_tdx.json  holesky.json  localhost_mock.json
contracts/: foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol  EmptyContract.sol
contracts/src/core/: AttestationVerifier.sol  ProverRegistry.sol
contracts/src/interfaces/: IProverRegistry.sol
crates/base/: Cargo.toml
crates/base/src/: base64.rs  error.rs  eth.rs  keypair.rs  lib.rs  prover_registry.rs  thread.rs
crates/executor/: Cargo.toml
crates/executor/src/: block_executor.rs  chain.rs  lib.rs  memdb.rs  types.rs
crates/prover/: Cargo.toml
crates/prover-types/: Cargo.toml
crates/prover-types/src/: hex_bytes.rs  lib.rs  pob.rs  prover_api.rs
crates/prover/src/: api.rs  keypair.rs  lib.rs  pob.rs  poe.rs  prove.rs
crates/tee/: Cargo.toml
crates/tee/src/: agent_service.rs  attestation_report.rs  ima.rs  lib.rs  mock_builder.rs  tdx_builder.rs
scripts/: deploy_verifier.sh  env.sh
testdata/: guest-input-taiko-a7-848185.json  local-agent-with-tpm.json  proof-request-taiko-a7-848185.json  proof-request-unifi-testnet-48.json
