[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.73"

serde_json = { version = "1", features = ["raw_value"] }
serde = { version = "1" }

# rpc
jsonrpsee = "0.23"
jsonrpsee-core = "0.23"
jsonrpsee-types = "0.23"
jsonrpsee-http-client = "0.23"

ethers-core = "2.0.14"
revm = { version = "12.1.0", default-features = false, features = ["std", "c-kzg", "secp256k1", "blst","serde"] }
hex = "0.4.3"
rlp = { version = "0.5.2", features = ["rlp-derive"] }